--- a/blog/templates/blog/categoryposts.html
+++ b/blog/templates/blog/categoryposts.html
@@ -7,6 +7,13 @@
         <li><a href="{% url 'notifications' user.id %}">Notifications</a></li>
     {% endif %}
 {% endblock %}
+{% block mobile_notification_block %}
+    {% if notification_count %}
+        <li><a class="teal-text" href="{% url 'notifications' user.id %}">Notifications <span class="red-text">{{ notification_count }}</span></a></li>
+    {% else %}
+        <li><a class="teal-text" href="{% url 'notifications' user.id %}">Notifications</a></li>
+    {% endif %}
+{% endblock %} 
 {% block bodytag %}
     <body style="background: url('{% static 'bgs/bg9.jpg' %}') no-repeat center center fixed;
                  -webkit-background-size: cover;
