--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -15,6 +15,13 @@
         <li><a href="{% url 'notifications' user.id %}">Notifications</a></li>
     {% endif %}
 {% endblock %}
+{% block mobile_notification_block %}
+    {% if notification_count %}
+        <li><a class="teal-text" href="{% url 'notifications' user.id %}">Notifications <span class="red-text">{{ notification_count }}</span></a></li>
+    {% else %}
+        <li><a class="teal-text" href="{% url 'notifications' user.id %}">Notifications</a></li>
+    {% endif %}
+{% endblock %} 
 {% block content %}
 <div class="container">
     <div class="row">
