--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -8,6 +8,13 @@
         <li><a href="{% url 'notifications' user.id %}">Notifications</a></li>
     {% endif %}
 {% endblock %}
+{% block mobile_notification_block %}
+    {% if notification_count %}
+        <li><a class="teal-text" href="{% url 'notifications' user.id %}">Notifications <span class="red-text">{{ notification_count }}</span></a></li>
+    {% else %}
+        <li><a class="teal-text" href="{% url 'notifications' user.id %}">Notifications</a></li>
+    {% endif %}
+{% endblock %} 
 {% block bodytag %}
     <body style="background: url('{% static 'bgs/bg.jpg' %}') no-repeat center center fixed;
                  -webkit-background-size: cover;
@@ -163,7 +170,7 @@
         {% endif %}
         </div>
     </div>
-    <div id="deleteconfirmmodal" class="modal">
+    <div id="deleteconfirmmodal" class="modal black-text">
         <div class="modal-content">
             <p class="flow-text">Warning: Are you sure you want to delete this POST???</p>
             <br>
