--- a/blog/templates/blog/approvals.html
+++ b/blog/templates/blog/approvals.html
@@ -28,7 +28,7 @@
                 <div class="col s12">
                     <div class="card green white-text">
                         <div class="card-content flow-text">
-                            You have approved the post '{{ approved_post.title }}' by author <a href="{% url 'userdetails' approved_post.author.id %}">{{ approved_post.author.username }}</a>
+                            You have approved the post <a href="{% url 'blogpost' approved_post.id %}">'{{ approved_post.title }}'</a> by author <a href="{% url 'userdetails' approved_post.author.id %}">{{ approved_post.author.username }}</a>
                         </div>
                     </div>
                 </div>
@@ -39,7 +39,7 @@
                 <div class="col s12">
                     <div class="card red white-text">
                         <div class="card-content flow-text">
-                            You have denied the post '{{ denied_post.title }}' by author <a href="{% url 'userdetails' denied_post.author.id %}">{{ denied_post.author.username }}</a>
+                            You have denied the post <a href="{% url 'blogpost' denied_post.id %}">'{{ denied_post.title }}'</a> by author <a href="{% url 'userdetails' denied_post.author.id %}">{{ denied_post.author.username }}</a>
                         </div>
                     </div>
                 </div>
@@ -50,7 +50,7 @@
                 <div class="col s12">
                     <div class="card red white-text">
                         <div class="card-content flow-text">
-                            Couldn't deny the post '{{ denied_post.title }}' by <a href="{% url 'userdetails' denied_post.author.id %}">{{ denied_post.author.username }}</a> because no moderation comments were provided
+                            Couldn't deny the post <a href="{% url 'blogpost' denied_post.id %}">'{{ denied_post.title }}'</a> by <a href="{% url 'userdetails' denied_post.author.id %}">{{ denied_post.author.username }}</a> because no moderation comments were provided
                         </div>
                     </div>
                 </div>
@@ -66,6 +66,7 @@
             <div class="row">
                 <div class="col s12">
                     <h4>{{ post.title }}</h4>
+                    <p>Written under <a href="{% url 'categoryposts' category=post.category %}"><strong>{{ post.category }}</strong></a></p>
                 </div>
             </div>
             <div class="row">
@@ -78,7 +79,7 @@
             </div>
             <div class="row">
                 <div class="col s8">
-                    {{ post.summary | safe }}<a href="{% url 'blogpost' post.id %}">....(read more)</a>
+                    {{ post.body|truncatewords:50|safe }}<a href="{% url 'blogpost' post.id %}">....(read more)</a>
                 </div>
                 <div class="col s4 right-align">
                     <img src="{{ post.image.url }}" class="responsive-img" />
