--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -31,43 +31,46 @@
     </div>
     <hr> 
     {% for post in posts %}
-    <div class="row">
-        <div class="col s12">
-            <a href="{% url 'blogpost' post.id %}">
-                <h4>{{ post.title }}</h4>
-            </a>
+        <div class="row">
+            <div class="row">
+                <div class="col s12">
+                    <a href="{% url 'blogpost' post.id %}">
+                        <h4>{{ post.title }}</h4>
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s4">
+                    <h6>Written on {{ post.dateandtimepretty }}</h6>
+                </div>
+                <div class="col s8 right-align">
+                    <h6>Written by <a href="{% url 'userdetails' post.author.id %}">{{ post.author.username }}</a></h6>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12">
+                    <em>{{ post.intro }}</em>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12">
+                    <h6>Written under <a href="{% url 'categoryposts' category=post.category %}"><strong>{{ post.category }}</strong></a></h6>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12">
+                    <img src="{{ post.image.url }}" class="responsive-img" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12">
+                    {{ post.body|truncatewords:50|safe }} <a href="{% url 'blogpost' post.id %}">(read more)</a>
+                </div>
+            </div>
+            <hr>
         </div>
-    </div>
-    <div class="row">
-        <div class="col s4">
-            <h6>{{ post.dateandtime }}</h6>
-        </div>
-        <div class="col s8 right-align">
-            <h6>Written by <a href="{% url 'userdetails' post.author.id %}">{{ post.author.username }}</a></h6>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col s12">
-            <em>{{ post.intro }}</em>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col s12">
-            <h6>Written under <strong>{{ post.category }}</strong></h6>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col s12">
-            <img src="{{ post.image.url }}" class="responsive-img" />
-        </div>
-    </div>
-    <div class="row">
-        <div class="col s12">
-            {{ post.summary | safe }}<a href="{% url 'blogpost' post.id %}">....(read more)</a>
-        </div>
-    </div>
-    <hr> {% empty %}
-    <p class="flow-text">No posts</p>
+    {% empty %}
+        <p class="flow-text">No posts</p>
     {% endfor %}
 </div>
 {% endblock %}
