Overhauled the signup form using django's forms and added a captcha field to prevent spam bots

--- a/astroblog/templates/aboutus.html
+++ b/astroblog/templates/aboutus.html
@@ -38,7 +38,11 @@ Welcome to our blog which is a literary embodiment of the above quote. Except ou
 <br>
 <br>
 The blog was developed by wannabe astrophysicists with the aim of creating a space for people with a deep-interest in space so that they can ponder over the mysteries of the cosmos and geek about the gravitational wave dance. <em>*insert stuff you can do*.</em>
-I solemnly swear that we’re punny and we deliver great content which is moderated by amazing people to ensure that there are no trolls.</p>
+I solemnly swear that we’re punny and we deliver great content which is moderated by amazing people to ensure that there are no trolls.
+                 <br>
+                     <br>
+                     But anyway, here's a quote from the popular cosmologist and our inspiration, Stephen Hawking, “Remember to look up at the stars and not down at your feet. Try to make sense of what you see and wonder about what makes the universe exist. Be curious. And however difficult life may seem, there is always something you can do and succeed at.
+                     It matters that you don't just give up.”</p>
             </div>
         </div>
     </div>
