--- a/accounts/templates/accounts/authenticate.html
+++ b/accounts/templates/accounts/authenticate.html
@@ -34,13 +34,6 @@
             </form>
         </div>
         <div class="col s4 offset-s4 right-align">
-            {% if signup_error %}
-            <div class="card">
-                <div class="card-content center-align red white-text">
-                    {{ signup_error }}
-                </div>
-            </div>
-            {% endif %}
             {% if signup_success %}
             <div class="card">
                 <div class="card-content center-align green white-text">
@@ -50,23 +43,39 @@
             {% endif %}
             <h3>Signup</h3>
             <form id="signupform" method="post" action="{% url 'signup' %}">
+                    {% if signup_form.errors %}
+                    <div class="card">
+                        <div class="card-content red white-text">
+                            <h6 class="center-align"><u>There are some errors in your Signup fields</u></h6>
+                            <ul class="left-align">
+                                {% for k,v in signup_form.errors.items %}
+                                    <p><strong>{{ k }}</strong>: {{ v }}</p>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+                    {% endif %}
                 {% csrf_token %}
                 <div class="input-field">
-                    <input placeholder="Enter your username here" class="white-text" name="username" id="username" type="text" class="validate">
+                    {{ signup_form.username }}
                     <label for="username">Username</label>
                 </div>
                 <div class="input-field">
-                    <input placeholder="Enter your email here" class="white-text" name="email" id="email" type="email" class="validate">
+                    {{ signup_form.email }}
                     <label for="email">Email</label>
-                    <span class="helper-text" data-error="Invalid email address" data-success="Valid">Enter a valid email: example@website.com</span>
+                    <span class="helper-text white-text" data-error="Invalid email address" data-success="Valid">Enter a valid email: example@website.com</span>
                 </div>
                 <div class="input-field">
-                    <input placeholder="Password to register with" class="white-text" name="password" id="password" type="password" class="validate">
+                    {{ signup_form.password1 }}
                     <label for="password">Password</label>
                 </div>
                 <div class="input-field">
-                    <input placeholder="Confirm your password here" class="white-text" name="confirmpassword" id="confirmpassword" type="password" class="validate">
+                    {{ signup_form.password2 }}
                     <label for="confirmpassword">Confirm password</label>
+                </div>
+                <div class="input-field">
+                    {{ signup_form.captcha }}
+                    <label for="captcha">Captcha</label>
                 </div>
                 <input type="hidden" name="next" value="{{ next }}" />
                 <a class="btn waves-effect blue hoverable" href="javascript:{document.getElementById('signupform').submit()}">Signup</a>
